Compiler/tests/typing/good/testfile-struct-2.rs

struct S { a: i32, b: bool }
fn main() { let x = S { b: true, a: 42 }; }
