Compiler/tests/typing/bad/testfile-assign-5.rs

struct S { a: i32 }
fn main() { let x = 42; let s = S { a: 89 }; s = 0; }
